# WoWs-LiveBattle

./: .gitignore  Cargo.toml  README.md  event_parser.py  reader.py
archive/: float2hex.py  reader.py
archive/research/: 20230508_193932_PVSC103-Vicente-Guerrero_01_solomon_islands.wowsreplay  README.md
archive/research/20230510/: 1.wowsreplay  6.wowsreplay  7 (1).wowsreplay  7 (2).wowsreplay  7-diff.wowsreplay  8 (1).wowsreplay  8 (2).wowsreplay  8-diff.wowsreplay
archive/research/20230512/: README.md
archive/research/20230513/: 20230513_212511_PJSD210-Harugumo_00_CO_ocean.wowsreplay  decoded.out
archive/research/20230516/: 20210623_172808_PASC710-Salem_51_Greece.wowsreplay
livebattle/: Cargo.toml
livebattle/client/: battle_info.py  client.py  player_info.py
livebattle/src/: lib.rs
livebattle/src/parser/: mod.rs  replay_parser.rs
livebattle/src/reader/: live_reader.rs  mod.rs
livebattle/src/server/: builder.rs  mod.rs  processor.rs  server.rs
livebattle/versions/: README.md
parser/: Cargo.toml
parser/src/: error.rs  packet2.rs  version.rs
parser/src/analyzer/: chat.rs  decoder.rs  mapping.rs
parser/src/rpc/: typedefs.rs
research/: README.md  events.csv  tempArenaInfo.json
research/20230510/: 2.wowsreplay  3.wowsreplay  4.wowsreplay  5 (1).wowsreplay  5 (2).wowsreplay  5-diff.wowsreplay  README.md  tempArenaInfo.json
research/20230512/: 20230512_211235_PASD005-Farragut-1944_00_CO_ocean.wowsreplay  damage.wowsreplay  flooding.wowsreplay
research/20230513/: README.md  temp.wowsreplay
versions/: README.md
wowslivebattle/: Cargo.toml
(+17 files in other folders)
