[package]
name = "wows-live-battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wows-replays = { path = "../parser" }
log = "0.4.0"
env_logger = "0.9.1"
serde_json = "1.0"
tungstenite = "0.20.1" # websocket
